# omnis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  ingest.py  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: nodes.py  router.py  state.py
agents/graph/: __init__.py
agents/memory/: __init__.py
api/: config.py  main.py
api/middleware/: cache.py  rate_limit.py
api/routes/: ask.py  graph.py  health.py  ingest.py  query.py
api/schemas/: ask.py  graph.py  ingest.py  query.py
cli/: main.py
docker/: api.Dockerfile  worker.Dockerfile
docker/clickhouse/: config.xml
docs/: CLAUDE-agents.md  CLAUDE-deployment.md  CLAUDE-devex.md  CLAUDE-graphrag.md  CLAUDE-production.md  CLAUDE-stack.md  CLAUDE-ui.md
ingestion/: chunker.py  embed_config.py  embedder.py  graph_builder.py  parser.py  pipeline.py  vector_store.py
observability/: __init__.py  helicone.py  langfuse.py
omnis-ui/: Dockerfile  README.md  fix_chat.mjs  fix_chat_safe.js  index.html  merge_chat.js  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
omnis-ui/src/app/: App.tsx  routes.tsx
omnis-ui/src/app/components/: MarkdownMessage.tsx  ThemeProvider.tsx
omnis-ui/src/app/components/chat/: CitationRichText.tsx
omnis-ui/src/app/components/traces/: AgentPrism.tsx
omnis-ui/src/app/context/: UploadContext.tsx
omnis-ui/src/app/layouts/: AuthLayout.tsx  MainLayout.tsx
omnis-ui/src/app/lib/: api.ts  askStream.ts  graphStream.ts  ingest.ts
omnis-ui/src/app/pages/: Chat.tsx  Documents.tsx  Evaluations.tsx  KnowledgeGraph.tsx  Settings.tsx
omnis-ui/src/app/pages/auth/: AuthShared.tsx  ForgotPassword.tsx  Login.tsx  Plan.tsx  Register.tsx
omnis-ui/src/imports/pasted_text/: auth-flow.md  universal-knowledge-hub-design.md
omnis-ui/src/styles/: fonts.css  tailwind.css  theme.css
retrieval/: __init__.py  fusion.py  graph_retriever.py  pipeline.py  reranker.py  vector_retriever.py
tests/agents/: test_graph.py  test_memory.py
tests/api/: test_ask_route.py  test_ingest_route.py  test_query_route.py
tests/ingestion/: test_chunker.py  test_embedder.py  test_parser.py  test_pipeline_integration.py  test_vector_store.py
tests/retrieval/: test_pipeline.py
tests/smoke/: test_config.py  test_health_route.py
worker/: broker.py  tasks.py
